# galagacv

./: CMakeLists.txt  README.md
src/: background_stars.cpp  background_stars.h  base.cpp  base.h  bomber.cpp  bomber.h  camera_controller.cpp  camera_controller.h  camera_initializer.cpp  camera_initializer.h  game_board.cpp  game_board.h  main.cpp  mainwindow.cpp  mainwindow.h  settings.h  spacebug.cpp  spacebug.h  spaceship.cpp  spaceship.h  sprite.cpp  sprite.h
